# online-school

./: .env_sample  Dockerfile  docker-compose.yaml  pyproject.toml  readme.md
config/: settings.py  urls.py
fixtures/: groups.json  payment.json  superuser.json  users.json
lms/: models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_subscription.py  0004_course_amount_lesson_amount.py
users/: models.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_rename_created_at_payment_payment_date_and_more.py  0004_payment_payment_link_payment_session_id_and_more.py  0005_remove_payment_amount_remove_payment_payment_status_and_more.py
